// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component test App snapshot with user id 1`] = `
<div>
  <Navbar />
  <main>
    &lt;Route path=/ /&gt;
    &lt;Route path=/cartPage /&gt;
    &lt;Route path=/loginRedirect /&gt;
    &lt;Route path=/ordersPage /&gt;
    &lt;Route render=[object Object] /&gt;
  </main>
  <CheckCircleIconSnackbar
    message="Logou Successfully"
    onClose={[Function]}
    open={false}
  />
</div>
`;

exports[`App component test App snapshot without user id 1`] = `
<div>
  <Navbar />
  <main>
    &lt;Route path=/ /&gt;
    &lt;Route path=/cartPage /&gt;
    &lt;Route path=/loginRedirect /&gt;
    &lt;Route path=/ordersPage /&gt;
    &lt;Route render=[object Object] /&gt;
  </main>
  <LoginDialog
    onClose={[Function]}
    onToggleSnackbar={[Function]}
    open={false}
  />
  <LoginDialogSnackbar
    message=""
    onClose={[Function]}
    open={false}
  />
  <CheckCircleIconSnackbar
    message="Logou Successfully"
    onClose={[Function]}
    open={false}
  />
</div>
`;
